--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register ./src/shared/infra/http/server.ts",
-    "test": "jest"
+    "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only ./src/shared/infra/http/server.ts",
+    "test": "jest",
+    "seed:admin": "ts-node-dev -r tsconfig-paths/register ./src/shared/infra/database/seed/admin"
+
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.13",
     "@types/pg": "^8.6.4",
@@ -23,6 +26,7 @@
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "jest": "^27.4.7",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
